--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   sqflite: ^1.1.7+1
+  image_picker: ^0.6.1+10
+  url_launcher: ^5.1.0
 
 dev_dependencies:
   flutter_test:
